# class_project_ai

./: .gitignore  LICENSE  README.md  pyproject.toml
1_chat_models/: 44_chat_model_conversation_with_user.py
1_chat_models/messages/: system_message.txt
