[tool.poetry]
name = "class-project-ai"
version = "0.1.0"
description = ""
authors = ["Matthew Dobley <mkmshopping@sbcglobal.net>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
langchain-openai = "^0.2.1"
python-dotenv = "^1.0.1"
langchain-google-genai = "^2.0.0"
langchain-anthropic = "^0.2.1"
langchain = "^0.3.1"
langchain-google-firestore = "^0.4.0"
langchain-core = "^0.3.7"
chromadb = "^0.5.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
